<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.raywenderlich.android.octomembers.ui.member.MemberActivity">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="@dimen/detail_avatar_container_size"
      android:background="@color/colorAccent"
      android:gravity="center_vertical"
      android:padding="@dimen/padding_standard">

    <ImageView
        android:id="@+id/memberAvatar"
        android:layout_width="@dimen/detail_avatar_size"
        android:layout_height="@dimen/detail_avatar_size"
        android:contentDescription="@string/contentDescription_teamMemberAvatar"
        tools:srcCompat="@tools:sample/avatars[14]" />

    <TextView
        android:id="@+id/memberName"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding_half"
        android:textAlignment="center"
        android:maxLines="3"
        android:textSize="@dimen/name_text_size"
        tools:text="John Doe"/>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:gravity="center"
      android:background="@color/colorPrimary"
      android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          style="@style/member_label"
          android:text="@string/label_login"/>

      <TextView
          android:id="@+id/memberLogin"
          style="@style/member_info" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          style="@style/member_label"
          android:text="@string/label_company"/>

      <TextView
          android:id="@+id/memberCompany"
          style="@style/member_info" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          style="@style/member_label"
          android:text="@string/label_email"/>

      <TextView
          android:id="@+id/memberEmail"
          style="@style/member_info" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          style="@style/member_label"
          android:text="@string/label_type"/>

      <TextView
          android:id="@+id/memberType"
          style="@style/member_info" />

    </LinearLayout>
  </LinearLayout>


</LinearLayout>
